--- a/README.html
+++ b/README.html
@@ -141,7 +141,8 @@ $ is_red = true,                                        var is_red = true,
 </code></pre>
 <h4 id="functions">Functions</h4>
 <p>Functions in KobraScript take some inspiration from Java. Type of return is written in front of <code>fn</code> complying with the statically typed paradigm of KobraScript. Within the parameter of the function, a type can be specified or omitted for dynamic parameter input.</p>
-<pre><code>floatfn average_intake (x):  --alternatively, (x : float[]) to take in a float array
+<pre><code>--alternatively, (x : float[]) to take in a float array
+floatfn average_intake (x):
     $ total = 0
     for ($ i = 0; i &lt; x.length; i++)
         total = total + x[i]
@@ -150,24 +151,29 @@ $ is_red = true,                                        var is_red = true,
     return total / x.length
 }
 </code></pre>
+<p>A function that does not return anything in KobraScript is called a procedure, written as <code>proc</code>. These have a special declaration, shown below.</p>
+<pre><code>proc print_intake (y):
+    say(average_intake(y))
+end
+</code></pre>
 <h4 id="if-else-conditions"><code>if</code>-<code>else</code> Conditions</h4>
 <p><code>If</code> and <code>else</code> conditions follow a similar paradigm as functions. In KobraScript, <code>if</code>-<code>else</code> conditional statement blocks should conclude with <code>..</code> to increase readability.</p>
 <pre><code>if (is_red &amp;&amp; is_food):                                 if (is_red &amp;&amp; is_food) {
-    eat ()                                                  eat ()
-.. else if (is_food &amp;&amp; is_mine):                        } else if (is_food &amp;&amp; is_mine)
-    add_butter ()
-.. else:
-    keep ()
-end
-
---  Legal if, else-if, else (discouraged)
-if (is_red &amp;&amp; is_food):
-    eat ()
-end else if (is_food &amp;&amp; is_mine):
-    add_butter ()
-end else:
-    keep ()
-end
+    eat ()                                                  eat ();
+.. else if (is_food &amp;&amp; is_mine):                        } else if (is_food &amp;&amp; is_mine) {
+    add_butter ()                                           add_butter ();
+.. else:                                                } else {
+    keep ()                                                 keep();
+end                                                     }
+</code></pre>
+<p>Below is also another legal form of an if, else-if, else conditional statement, but this form is discouraged.</p>
+<pre><code>if (is_red &amp;&amp; is_food):                                 if (is_red &amp;&amp; is_food) {
+    eat ()                                                  eat ();
+end else if (is_food &amp;&amp; is_mine):                       } else if (is_food &amp;&amp; is_mine) {
+    add_butter ()                                           add_butter ();
+end else:                                               } else {
+    keep ()                                                 keep();
+end                                                     }
 </code></pre>
 <h4 id="objects">Objects</h4>
 <p>Objects are very similar in KobraScript to JavaScript. Braces are used specifically for objects, and nothing else.</p>
@@ -187,6 +193,54 @@ end
 }
 </code></pre>
 <h4 id="blueprints-classes">Blueprints (Classes)</h4>
+<p>Blueprints are a form of class implementation in KobraScript. It allows for a robust way to define object properties and methods, and expediate the process of creating a complex object.</p>
+<p>Blueprints consists of 4 parts:</p>
+<ol>
+<li><code>has</code>, which allows properties of the blueprint to be declared</li>
+<li><code>does</code>, which allows functions of the blueprint to be declared</li>
+<li><code>synget</code>, which allows <code>get_property()</code> functions to be created, and</li>
+<li><code>synset</code>, which allows <code>set_property()</code> functions to be created.</li>
+</ol>
+<p>Here is an example of a blueprint of a robot.  </p>
+<pre><code>$ blueprint Robot   -- initalizes the blueprint
+
+$ has {
+    id : bits8,
+    year : int,
+    energy_level = 100 : int,
+    missle_container = (20, 20) : tuple2,
+    base_speed = 320.0 : float,
+    speed : float,
+    users : str[]
+}
+
+$ does {
+    Init = proc (id : bits8, year : int)
+        this.id, this.year = id, year
+        this.speed = this.base_speed
+    },
+    AddUser = boolfn (username : str)
+        for ($ i = 0; i &lt; users.length; i++)
+            return false if users[i].equals(username)
+        }
+        users = users.push(username)
+        return true
+    },
+    SpeedBoost = floatfn (m : float)
+        return speed = base_speed * m
+    }
+}
+
+$ synget {
+    id, year, energy_level, missle_container
+}
+
+$ synset {
+    //no setters, structure unneccessary
+}
+
+defcc --definition concluded
+</code></pre>
 <h4 id="arrays">Arrays</h4>
 <pre><code>$ protein_intake = [12, 21.3, 7.2, 20] : float[]    var protein_intake = [12.0, 21.3, 7.2, 20.0];
 </code></pre>
